Feature Update for Version 2409_RC

--- a/style-extension-1.css
+++ b/style-extension-1.css
@@ -517,6 +517,11 @@ blockquote {
     font-size: 12px;
     padding: 0 20px;
   }
+
+  .footer-content {
+    padding: 20px 0;
+    padding-right: 10px;
+}
 }
 
 
