Feature Update for Version 2409_RC

--- a/style-extension-1.css
+++ b/style-extension-1.css
@@ -423,6 +423,13 @@ blockquote {
   padding-top: 3em;
 }
 
+hr {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border: 0;
+  border-top: 1px solid #6364576e;
+}
+
 
 
 /* Width */
