--- a/style-extension-1.css
+++ b/style-extension-1.css
@@ -1,3 +1,17 @@
+/* ------------------------------------------
+[Tables of CSS Content]
+
+> style
+> style-extension-1 (this)
+    - 17.0 Hero Details CSS
+    - 18.0 Skills Section CSS
+    - 19.0 Works by NRFZ_Details Section CSS
+    - 20.0 Blog Post Section CSS
+    - 21.0 Responsive_Extension CSS - Width
+    - 22.0 Responsive_Extension CSS - Height
+--------------------------------------------- */
+
+/* :: 17.0 Hero Details CSS */
 img.profile-pic {
   width: 320px;
   height: 320px;
@@ -32,6 +46,7 @@ img.profile-pic {
 }
 
 
+/* :: 18.0 Skills Section CSS */
 .owl-carousel.owl-loaded {
   display: block;
   scale: 0.65;
@@ -81,117 +96,8 @@ img.profile-pic {
   border-radius: 7px;
 }
 
-.gallery-area {
-  position: relative;
-}
 
-.gallery-area.gallery-area2::before {
-  position: unset;
-}
-
-.gallery-area::before {
-  position: absolute;
-  content: "";
-  width: 74%;
-  height: 70%;
-  background: #F8F8F8;
-  border-radius: 90px 0px 0px 90px;
-  top: 0;
-  right: 0;
-  bottom: 0;
-}
-
-@media only screen and (min-width: 2100px) and (max-width: 2600px) {
-  .gallery-area::before {
-    width: 68%;
-  }
-}
-
-.gallery-area .box {
-  position: relative;
-  border-radius: 10px;
-}
-
-.gallery-area .box .gallery-img {
-  height: 565px;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.gallery-area .box .small-img {
-  height: 400px;
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .gallery-area .box .small-img {
-    height: 380px;
-  }
-}
-
-@media only screen and (min-width: 576px) and (max-width: 767px) {
-  .gallery-area .box .small-img {
-    height: 335px;
-  }
-}
-
-@media (max-width: 575px) {
-  .gallery-area .box .small-img {
-    height: 335px;
-  }
-}
-
-.gallery-area .box .overlay {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 133, 83, 0.3);
-  top: 0;
-  left: 0;
-  border-radius: 10px;
-}
-
-.gallery-area .box .overlay .overlay-content {
-  position: absolute;
-  left: 10%;
-  bottom: 37px;
-}
-
-.gallery-area .box .overlay .overlay-content a {
-  color: #000000;
-  display: inline-block;
-  font-size: 26px;
-  -webkit-transition: 0.4s;
-  -moz-transition: 0.4s;
-  -o-transition: 0.4s;
-  transition: 0.4s;
-  transform: scale(1);
-}
-
-@media only screen and (min-width: 576px) and (max-width: 767px) {
-  .gallery-area .box .overlay .overlay-content a {
-    font-size: 16px;
-  }
-}
-
-@media (max-width: 575px) {
-  .gallery-area .box .overlay .overlay-content a {
-    font-size: 22px;
-  }
-}
-
-.gallery-area .box .overlay .overlay-content a:hover {
-  transform: scale(1.08);
-}
-
-.gallery-area .box.snake {
-  position: relative;
-  overflow: hidden;
-}
-
-
-/*--------------------------------------------------------------
-# Portfolio Details
---------------------------------------------------------------*/
+/* :: 19.0 Works by NRFZ_Details Section CSS */
 
 .portfolio-details-slider img {
   width: 100%;
@@ -236,9 +142,7 @@ img.profile-pic {
 }
 
 
-/*--------------------------------------------------------------
-# Blog Posts
---------------------------------------------------------------*/
+/* :: 20.0 Blog Post Section CSS */
 .breadcrumb-area .page-title-blog {
   color: #ffffff;
   font-size: 65px;
@@ -440,7 +344,7 @@ hr {
 
 
 
-/* Width */
+/* :: 21.0 Responsive_Extension CSS - Width */
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   img.profile-pic {
     width: 310px;
@@ -540,10 +444,7 @@ hr {
 }
 
 
-
-
-
-/* Height */
+/* :: 22.0 Responsive_Extension CSS - Height */
 @media (min-height: 531px) and (max-height: 620px) {
   .breadcrumb-content {
     scale: 0.8;
