Feature Update for Version 2409_RC

--- a/css/style.css
+++ b/css/style.css
@@ -25,14 +25,14 @@
 
 /* Import Fonts & All CSS */
 @import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700");
-@import url(css/bootstrap.min.css);
-@import url(css/animate.css);
-@import url(css/default-assets/classy-nav.css);
-@import url(css/owl.carousel.min.css);
-@import url(css/magnific-popup.css);
-@import url(css/font-awesome-all.min.css);
-@import url(css/default-assets/themify-icons.css);
-@import url(css/style.css);
+@import url(bootstrap.min.css);
+@import url(animate.css);
+@import url(default-assets/classy-nav.css);
+@import url(owl.carousel.min.css);
+@import url(magnific-popup.css);
+@import url(font-awesome-all.min.css);
+@import url(default-assets/themify-icons.css);
+@import url(style.css);
 
 /* :: 1.0 Reboot CSS */
 * {
@@ -828,7 +828,7 @@ section.follow-area.clearfix {
 #hero {
     width: 100%;
     height: 100vh;
-    background: url("img/bg-img/hero-bg.png") top right no-repeat;
+    background: url("../img/bg-img/hero-bg.png") top right no-repeat;
     background-size: cover;
     position: relative;
     backdrop-filter: blur(5px);
