--- a/css/style-extension-1.css
+++ b/css/style-extension-1.css
@@ -342,6 +342,10 @@ hr {
   padding-bottom: 10px;
 }
 
+#proposal {
+  scroll-margin-top: 8vh;
+}
+
 
 
 /* :: 21.0 Responsive_Extension CSS - Width */
