--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ a,
 a:active,
 a:focus,
 a:hover {
-    color: #252525;
+    color: #80a8cc;
     text-decoration: none;
     -webkit-transition-duration: 500ms;
     -o-transition-duration: 500ms;
