2024-09 Feature Update for Version 2409

--- a/css/style.css
+++ b/css/style.css
@@ -1514,7 +1514,7 @@ section.follow-area.clearfix {
 }
 
 li.breadcrumb-item.active a {
-    color: #80a8cc !important;
+    color: #898a77 !important;
 }
 
 /* :: 15.0 Blog CSS */
