--- a/css/style.css
+++ b/css/style.css
@@ -618,7 +618,7 @@ section.follow-area.clearfix {
     display: none;
 }
 
-.breakpoint-on .classynav > ul > li > a {
+.breakpoint-on .classynav>ul>li>a {
     background-color: #e9eae5;
     border-bottom: 1px solid #898a77;
 }
@@ -627,10 +627,15 @@ section.follow-area.clearfix {
     background-color: #e9eae5;
 }
 
+.classy-nav-container .classy-navbar .nav-brand {
+    max-width: 180px;
+    margin-left: -73px;
+}
+
 @media only screen and (max-width: 767px) {
     .classy-nav-container .classy-navbar .nav-brand {
-        max-width: 90px;
-        margin-right: 15px;
+        max-width: 174px;
+        margin-left: -63px;
     }
 }
 
@@ -930,28 +935,28 @@ section.follow-area.clearfix {
 
 @keyframes fadeInUp {
     0% {
-      opacity: 0;
-      -webkit-transform: translate3d(0, 8%, 0);
-      transform: translate3d(0, 8%, 0)
+        opacity: 0;
+        -webkit-transform: translate3d(0, 8%, 0);
+        transform: translate3d(0, 8%, 0)
     }
-  
+
     100% {
-      opacity: 1;
-      -webkit-transform: translateZ(0);
-      transform: translateZ(0)
+        opacity: 1;
+        -webkit-transform: translateZ(0);
+        transform: translateZ(0)
     }
-  }
-  
-  .fadeInUp {
+}
+
+.fadeInUp {
     -webkit-animation-name: fadeInUp;
     animation-name: fadeInUp
-  }
-  
+}
+
 
 @keyframes slideInLeft {
     0% {
-        -webkit-transform: translate3d(-100%,0,0);
-        transform: translate3d(-100%,0,0);
+        -webkit-transform: translate3d(-100%, 0, 0);
+        transform: translate3d(-100%, 0, 0);
         visibility: visible
     }
 
@@ -1623,7 +1628,7 @@ li.breadcrumb-item.active a {
 .pw-portfolio-area {
     position: relative;
     z-index: 1;
-    background-color: #f5f6f2;  
+    background-color: #f5f6f2;
 }
 
 .pw-portfolio-area .container-fluid {
