--- a/css/style.css
+++ b/css/style.css
@@ -862,7 +862,7 @@ section.follow-area.clearfix {
 #hero-smrt {
     width: 100%;
     height: 100vh;
-    background: url("../img/bg-img/hero-smrt.jpg") top right no-repeat;
+    background: url("../img/bg-img/hero.png") top right no-repeat;
     background-size: cover;
     position: relative;
     backdrop-filter: blur(5px);
