--- a/css/style.css
+++ b/css/style.css
@@ -1033,7 +1033,7 @@ section.follow-area.clearfix {
 }
 
 .footer-content .copywrite-text p a {
-    color: #fc6060;
+    color: #789bba;
     font-weight: 400;
 }
 
