--- a/css/style-extension-1.css
+++ b/css/style-extension-1.css
@@ -432,6 +432,184 @@ hr {
   padding-top: 15px;
 }
 
+.container-nav {
+  max-width: 1450px;
+}
+
+/*  */
+.container-blogList {
+  max-width: 1450px;
+}
+
+.blog-entry {
+  background: #fff;
+  border: 1px solid #f5fdf9;
+  margin-bottom: 30px;
+  border-radius: 20px;
+  box-shadow: 3px 0 15px -1px rgba(0, 0, 0, 0.15);
+}
+
+
+.blog-entry .col-md-6 {
+  position: relative;
+  width: 100%;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.blog-entry .block-20 {
+  overflow: hidden;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 45%;
+  position: relative;
+  display: block;
+  border-radius: 20px;
+}
+
+.order-md-last {
+  -webkit-box-ordinal-group: 14;
+  -ms-flex-order: 13;
+  order: 13;
+}
+
+.blog-entry .text {
+  position: relative;
+  border-top: 0;
+  border-radius: 2px;
+  width: 55%;
+}
+
+.blog-entry a {
+  position: relative;
+  border-top: 0;
+  border-radius: 20px;
+  width: 55%;
+  color: #000;
+}
+
+.blog-entry .category {
+  position: absolute;
+  padding: 2px 15px;
+  border-radius: 20px;
+  font-size: 12px;
+  text-transform: uppercase;
+  color: #252525;
+  background-color: #e4e6cf;
+  top: 15px;
+  left: 15px;
+  font-weight: 500;
+}
+
+.blog-entry .text .heading {
+  font-size: 20px;
+  margin-bottom: 16px;
+}
+
+.blog-entry .icon {
+  width: 60px;
+  height: 60px;
+  background: rgba(255, 255, 255, 0.8);
+  opacity: 0;
+  border-radius: 50%;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.blog-entry:hover .icon {
+  opacity: 1;
+}
+
+.blog-entry a.blog-date {
+  color: #6d7072
+}
+
+.blog-entry .blog-date-div {
+  margin-top: 2em;
+  font-size: 14px;
+  color: #80a8cc;
+}
+
+.p-4 {
+  padding: 1.5rem !important;
+}
+
+.d-block {
+  display: block !important;
+}
+
+.ftco-section-blog {
+  padding: 7em 0;
+}
+
+.mt-5 {
+  margin-top: 3rem !important;
+}
+
+.block-20 {
+  overflow: hidden;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 45%;
+  position: relative;
+  display: block;
+}
+
+.block-27 ul li a,
+.block-27 ul li span {
+  text-align: center;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  color: #4a5562;
+  border: 1px solid #dee2e6;
+}
+
+.block-27 ul {
+  padding: 0;
+  margin: 0;
+}
+
+.block-27 ul li {
+  display: inline-block;
+  margin-bottom: 4px;
+}
+
+.block-27 ul li a,
+.block-27 ul li span {
+  text-align: center;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  color: #4a5562;
+  border: 1px solid #dee2e6;
+  border-radius: 20px;
+}
+
+.block-27 ul li.active a,
+.block-27 ul li.active span {
+  background: #898a77;
+  color: #fff;
+  border: 1px solid transparent;
+  border-radius: 20px;
+}
+
+
+
+.col-pg {
+  -ms-flex-preferred-size: 0;
+  flex-basis: 0;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  max-width: 100%;
+}
 
 /* :: 21.0 Responsive_Extension CSS - Width */
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
@@ -576,7 +754,7 @@ hr {
   .wbnrfz_btn {
     min-width: 100%;
   }
-  
+
 }
 
 
