--- a/css/style-extension-1.css
+++ b/css/style-extension-1.css
@@ -49,7 +49,8 @@ img.profile-pic {
 /* :: 18.0 Skills Section CSS */
 .owl-carousel.owl-loaded {
   display: block;
-  scale: 0.65;
+  scale: 0.8;
+  padding-top: 15px;
 }
 
 .skill-ara {
@@ -145,7 +146,7 @@ img.profile-pic {
 /* :: 20.0 Blog Post Section CSS */
 .breadcrumb-area .page-title-blog {
   color: #ffffff;
-  font-size: 65px;
+  font-size: 55px;
 }
 
 .mb-3 {
@@ -431,7 +432,7 @@ hr {
   padding-top: 15px;
 }
 
-.container-nav {
+.container-xxl {
   max-width: 1450px;
 }
 
@@ -599,8 +600,6 @@ hr {
   border-radius: 20px;
 }
 
-
-
 .col-pg {
   -ms-flex-preferred-size: 0;
   flex-basis: 0;
@@ -610,9 +609,6 @@ hr {
   max-width: 100%;
 }
 
-footer {
-  z-index: 999;
-}
 
 /* :: 21.0 Responsive_Extension CSS - Width */
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
@@ -757,6 +753,7 @@ footer {
 
   .about-me-content {
     padding: 56px 32px 20px;
+    margin-top: 12px;
   }
 
   .wbnrfz_details .details_catagory_wrap {
