2025-XX Cumulative Update (4.2.XX)

--- a/css/style.css
+++ b/css/style.css
@@ -1398,6 +1398,7 @@ section.follow-area.clearfix {
 .wbnrfz-summ {
     background-color: #f5f6f2;
     padding-top: 50px;
+    padding-bottom: 10px;
 }
 
 
