--- a/css/style-extension-1.css
+++ b/css/style-extension-1.css
@@ -247,6 +247,13 @@ figcaption p {
   padding-bottom: 2px;
 }
 
+.about-author {
+  background-color: #e4e6cf !important;
+  box-shadow: 0px 0 30px rgba(69, 80, 91, 0.08);
+  border-radius: 20px;
+  padding-bottom: 2px;
+}
+
 .p-4 {
   padding: 1.5rem !important;
 }
@@ -430,7 +437,7 @@ hr {
   padding: 0 30px;
   text-align: center;
   text-transform: capitalize;
-  background-color: #bfc1ae;
+  background-color: #e4e6cf;
   color: #252525;
   border-radius: 60px;
   transition-duration: 500ms;
@@ -456,8 +463,7 @@ hr {
 }
 
 .blog-entry {
-  background: #fff;
-  border: 1px solid #f5fdf9;
+  background: #ffffff;
   margin-bottom: 30px;
   border-radius: 20px;
   box-shadow: 3px 0 15px -1px rgba(0, 0, 0, 0.15);
@@ -557,6 +563,7 @@ hr {
 
 .ftco-section-blog {
   padding: 7em 0;
+  background-color: #f6f7f2;
 }
 
 .mt-5 {
