--- a/css/style-main.css
+++ b/css/style-main.css
@@ -28,7 +28,7 @@
 --------------------------------------------- */
 
 /* Import Fonts & All  */
-@import url('https://fonts.googleapis.com/2?family=Onest:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap');
 @import url(bootstrap.min.css);
 @import url(animate.css);
 @import url(default-assets/classy-nav.css);
